chore: use separate access token for Semanticore workflow

--- a/.github/workflows/semanticore.yml
+++ b/.github/workflows/semanticore.yml
@@ -19,4 +19,4 @@ jobs:
       - name: Semanticore
         run: go run github.com/aoepeople/semanticore@v0
         env:
-          SEMANTICORE_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          SEMANTICORE_TOKEN: ${{secrets.SEMANTICORE_TOKEN}}
